--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="hero">
+    <div class="main-section">
       <div class="navbar">
         <img src="images/logo.png" alt="logo" class="logo">
         <button type="button">Sign Up</button>
